--- a/sass/style.scss
+++ b/sass/style.scss
@@ -211,7 +211,7 @@ header a:hover {
 
 .portfolio{
   background-color: $color3;
-  padding-bottom: 5rem;
+  padding-bottom: 10rem;
 }
 
 .portfolio .container {
@@ -273,4 +273,45 @@ img {
   transform: scale(1.1);
   transition: all 1s;
   cursor: pointer;
+}
+
+/* footer */
+
+footer {
+  display: flex;
+  position: relative;
+  text-align: center;
+  justify-content: center;
+  margin: 48px auto;
+}
+
+footer p {
+  position: absolute;
+  top: 50%;
+  left: 25%;
+  transform: translate(-50%,-50%);
+  font-family: $font-text;
+  font-weight: bold;
+  color: $light-text;
+}
+
+footer li {
+  font-size: 0px;
+  display: inline-block;
+  margin: 0 5px;
+}
+
+footer i {
+  width: 50px;
+  height: 50px;
+  font-size: 20px;
+  border-radius: 50%;
+  color: white;
+  cursor: pointer;
+  background: black;
+  padding: 15px 0;
+}
+
+footer li:hover {
+  transform: scale(1.2);    
 }
