--- a/sass/style.scss
+++ b/sass/style.scss
@@ -26,12 +26,16 @@ body {
   color: $color-text;
 }
 
+.container {
+  max-width: 1140px;
+  padding: 0 20px;
+  margin: 0 auto;
+}
 
 /* navigation */
 
 .logo {
   position: absolute;
-  margin-LEFT: 20%;
   font-family: $font-logo;
   color: #ffd32a;
   font-size: 80px;
@@ -43,7 +47,6 @@ nav {
   font-size: 30px;
   padding: 25px;
   text-align: -webkit-right;
-  margin-right: 15%;
 }
 
 .navigation ul {
@@ -157,7 +160,7 @@ header a:hover {
 
 .services .container {
   text-align: center;
-  margin: 0 10rem;
+  margin: 0 auto;
 }
 
 .services .section-title {
@@ -209,14 +212,13 @@ header a:hover {
 
 /* portfolio */
 
-.portfolio{
+.portfolio {
   background-color: $color3;
   padding-bottom: 10rem;
 }
 
 .portfolio .container {
   text-align: center;
-  margin: 0 10rem;
 }
 
 .portfolio h1 {
@@ -313,5 +315,63 @@ footer i {
 }
 
 footer li:hover {
-  transform: scale(1.2);    
+  transform: scale(1.2);
+}
+
+@media (max-width: 767px) {
+  .wrapper {
+    flex-direction: column;
+  }
+
+  .services-wrapper div{
+    padding: 0;
+    padding-top: 3rem;
+    flex-direction: column;    
+  }
+  .portfolio-wrapper div {
+    max-width: 300px;
+    margin: 0 auto;
+  }
+
+  footer p {
+    top: 145%;
+    left: 50%;
+    width: 300px;
+  }
+
+  .splash-inner {
+    font-size: 50px;
+  }
+  .logo {
+    position: relative;
+    text-align: justify;
+  }
+
+  .navigation {
+    font-size: 24px;
+  }
+
+  .page-title {
+    margin-top: 2rem;
+    font-size: 50px;
+  }
+
+  .page-subtitle {
+    font-size: 80px;
+  }
+  .navigation ul {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .navigation li {
+    margin-right: 4px;
+    padding: 5px;
+  }
+  .navigation li li a {
+    padding: 0 10px;    
+  }
+
+  .navigation ul ul li {
+      padding: 10px 1px;    
+  } 
 }
