--- a/sass/style.scss
+++ b/sass/style.scss
@@ -325,7 +325,7 @@ footer li:hover {
 
   .services-wrapper div{
     padding: 0;
-    padding-top: 3rem;
+    padding-bottom: 3rem;
     flex-direction: column;    
   }
   .portfolio-wrapper div {
@@ -337,6 +337,14 @@ footer li:hover {
     top: 145%;
     left: 50%;
     width: 300px;
+  }
+
+  .services .section-title {
+    margin: 3rem 0;
+  }
+
+  .portfolio .section-title {
+    padding: 3rem 0;
   }
 
   .splash-inner {
